--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나의 반응형 대시보드</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" href="styles/main.css">
+    
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -50,6 +52,6 @@
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/chart.js"></script>
 </body>
 </html>
