--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Custom CSS: Corrected path -->
+    <link rel="stylesheet" href="styles/main.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
