--- a/index.html
+++ b/index.html
@@ -250,6 +250,6 @@
     <!-- Chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Custom JavaScript for charts and dashboard logic -->
-    <script src="js/chart-js.js?v=202407231400"></script> <!-- Added version query parameter -->
+    <script src="js/chart-js.js"></script> <!-- Removed version query parameter -->
 </body>
 </html>
